# Virtual-Automotive-ECU

./: .gitignore  CMakeLists.txt  README.md
common/can/: CMakeLists.txt  CanArbitrationSimulator.cpp  CanArbitrationSimulator.h  CanAuthenticator.cpp  CanAuthenticator.h  CanAuthorization.cpp  CanAuthorization.h  CanInterruptSimulator.cpp  CanInterruptSimulator.h  CanSocket.cpp  CanSocket.h
common/crypto/: CMakeLists.txt  SecureBoot.cpp  SecureBoot.h
common/hsm/: CMakeLists.txt  HsmClient.cpp  HsmClient.h  HsmEmulator.cpp  HsmEmulator.h  HsmService.cpp  HsmService.h
common/scheduler/: CMakeLists.txt  TaskScheduler.cpp  TaskScheduler.h
common/uds/: CMakeLists.txt  DidManager.cpp  DidManager.h  DtcManager.cpp  DtcManager.h  SecurityManager.cpp  SecurityManager.h  SessionManager.cpp  SessionManager.h  UdsDispatcher.cpp  UdsDispatcher.h  UdsProtocol.cpp  UdsProtocol.h
docs/: architecture.md  demo_scenarios.md
ecus/bms/: CMakeLists.txt  main.cpp
ecus/gateway/: CMakeLists.txt  main.cpp
ecus/hsm_service/: CMakeLists.txt  main.cpp
ecus/radar_sensor/: CMakeLists.txt  main.cpp
ecus/sensor/: CMakeLists.txt  main.cpp
ecus/tpms/: CMakeLists.txt  main.cpp
scripts/: generate_firmware.sh  setup_vcan.sh
tests/: CMakeLists.txt  unit_tests.cpp
